# daily-office-lectionary

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SITE.md  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: fly.yml
daily_office_lectionary/: __main__.py  bot.py  config.py  db.py  ep_oos.json  lectionary.json  mp_oos.json
scripts/: seed_db.py
