[tool.poetry]
name = "daily_office_lectionary"
version = "0.1.0"
description = ""
authors = ["Julian Stephens <julian@julianstephens.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
discord-py = "^2.3.2"
pydantic-settings = "^2.2.1"
pytz = "^2024.1"
redis = "^5.0.4"
pandas = "^2.2.2"
tika = "^2.6.0"
liturgical-calendar = "^0.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pydocstyle = "^6.3.0"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
